// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when domain entity subclass has duplicate property name should have validation failures 1`] = `"Domain Entity Subclass SubclassName redeclares property DuplicatePropertyName of base Domain Entity."`;

exports[`when domain entity subclass has duplicate property name should have validation failures 2`] = `
Object {
  "column": 9,
  "line": 12,
  "tokenText": "DuplicatePropertyName",
}
`;

exports[`when domain entity subclass has multiple duplicate property name should have validation failures 1`] = `"Domain Entity Subclass SubclassName redeclares property DuplicatePropertyName1 of base Domain Entity."`;

exports[`when domain entity subclass has multiple duplicate property name should have validation failures 2`] = `
Object {
  "column": 9,
  "line": 16,
  "tokenText": "DuplicatePropertyName1",
}
`;

exports[`when domain entity subclass has multiple duplicate property name should have validation failures 3`] = `"Domain Entity Subclass SubclassName redeclares property DuplicatePropertyName2 of base Domain Entity."`;

exports[`when domain entity subclass has multiple duplicate property name should have validation failures 4`] = `
Object {
  "column": 9,
  "line": 20,
  "tokenText": "DuplicatePropertyName2",
}
`;
